trunk/tests/jastadd/negative/type_errors/L3/3_ConstDecl4.ob
MODULE TestModule;
	PROCEDURE f();
		CONST C = 2 * f;
	END f;
END TestModule.
